--- a/package.json
+++ b/package.json
@@ -5,16 +5,12 @@
   "packageManager": "pnpm@9.12.1+sha512.e5a7e52a4183a02d5931057f7a0dbff9d5e9ce3161e33fa68ae392125b79282a8a8a470a51dfc8a0ed86221442eb2fb57019b0990ed24fab519bf0e1bc5ccfc4",
   "scripts": {
     "dev": "next dev",
-    "build": "prisma generate && prisma db push && next build",
+    "build": "next build",
     "start": "next start",
-    "lint": "eslint",
-    "db:push": "prisma db push",
-    "db:seed": "node scripts/seed.js",
-    "db:generate": "prisma generate"
+    "lint": "eslint"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.9",
-    "@prisma/client": "^6.18.0",
     "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.3",
     "idb": "^8.0.3",
@@ -33,7 +29,6 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.0.0",
-    "prisma": "^6.18.0",
     "tailwindcss": "^4",
     "ts-node": "^10.9.2",
     "typescript": "^5"
